(library
 (name git_mirage_happy_eyeballs)
 (modules git_mirage_happy_eyeballs)
 (public_name git-mirage.happy-eyeballs)
 (libraries
  dns
  tls
  domain-name
  happy-eyeballs
  happy-eyeballs-mirage
  mirage-random
  mirage-clock
  tcpip
  mirage-time
  ipaddr
  mimic
  lwt))

(library
 (name git_mirage_ssh)
 (modules git_mirage_ssh)
 (public_name git-mirage.ssh)
 (libraries
  git-mirage.happy-eyeballs
  git.nss.git
  mimic
  lwt
  fmt
  result
  tcpip
  mirage-flow
  mirage-time
  mirage-clock
  awa
  awa-mirage))

(library
 (name git_mirage_tcp)
 (modules git_mirage_tcp)
 (public_name git-mirage.tcp)
 (libraries
  git-mirage.happy-eyeballs
  git.nss.git
  mimic
  lwt
  fmt
  result
  tcpip
  mirage-flow))

(library
 (name git_mirage_http)
 (modules git_mirage_http)
 (public_name git-mirage.http)
 (libraries
  git-mirage.happy-eyeballs
  git-paf
  git.nss.git
  mimic
  lwt
  fmt
  tls
  uri
  hex
  x509
  mirage-crypto
  tls-mirage
  ptime
  cstruct
  result
  ca-certs-nss
  domain-name
  tcpip
  mirage-flow
  mirage-time
  mirage-clock))
