(library
 (name git_mirage_ssh)
 (modules git_mirage_ssh)
 (public_name git-mirage.ssh)
 (libraries
  mimic-happy-eyeballs
  git.nss.git
  mimic
  lwt
  fmt
  tcpip
  mirage-flow
  mirage-time
  mirage-clock
  awa
  awa-mirage))

(library
 (name git_mirage_tcp)
 (modules git_mirage_tcp)
 (public_name git-mirage.tcp)
 (libraries mimic-happy-eyeballs git.nss.git mimic lwt fmt tcpip mirage-flow))

(library
 (name git_mirage_http)
 (modules git_mirage_http)
 (public_name git-mirage.http)
 (libraries
  base64
  mimic-happy-eyeballs
  git-paf
  git.nss.git
  mimic
  lwt
  fmt
  tls
  uri
  x509
  mirage-crypto
  tls-mirage
  ptime
  cstruct
  ca-certs-nss
  domain-name
  tcpip
  mirage-flow
  mirage-time
  mirage-clock))
