(library
 (name git_unix)
 (public_name git-unix)
 (modules git_unix git_unix_mimic packed_refs)
 (libraries
  tcpip
  ipaddr
  git-mirage.tcp
  git-mirage.ssh
  git-mirage.http
  happy-eyeballs-lwt
  decompress.de
  tls
  bos
  mimic
  astring
  carton
  git.nss.smart
  rresult
  bigstringaf
  fmt
  git.nss.git
  fpath
  digestif
  git
  logs
  cstruct
  mirage-flow
  lwt
  lwt.unix
  unix))
