(library
 (name git)
 (public_name git)
 (libraries
  angstrom
  astring
  bigstringaf
  carton
  carton-git
  carton-lwt
  checkseum
  cstruct
  decompress.de
  decompress.zl
  digestif
  encore
  fmt
  fpath
  git.nss.capability
  git.nss.git
  git.nss.hkt
  git.nss.pck
  git.nss.sigs
  git.nss.smart
  hxd.core
  hxd.string
  ke
  logs
  loose
  loose_git
  lwt
  mimic
  ocamlgraph
  optint
  result
  rresult
))
