(library
 (name git)
 (public_name git)
 (libraries
  hxd.core
  hxd.string
  mimic
  mirage-flow
  git.nss.unixiz
  rresult
  git.nss.sigs
  git.nss.pck
  optint
  loose
  decompress.de
  decompress.zl
  result
  git.nss.smart
  logs
  lwt
  cstruct
  angstrom
  bigstringaf
  carton
  ke
  fmt
  checkseum
  git.nss.git
  git.nss.hkt
  ocamlgraph
  astring
  fpath
  loose_git
  carton-lwt
  carton-git
  digestif
  encore))
