(library
 (name pkt_line)
 (public_name git-nss.pkt-line)
 (modules decoder encoder)
 (libraries astring fmt))

(library
 (name smart)
 (public_name git-nss.smart)
 (modules smart filter capability state protocol)
 (libraries git-nss.pkt-line conduit stdlib-shims result rresult domain-name
   astring fmt))

(library
 (name sigs)
 (public_name git-nss.sigs)
 (modules sigs)
 (libraries fmt cstruct))

(library
 (name neg)
 (public_name git-nss.neg)
 (modules neg find_common default)
 (libraries stdlib-shims fmt rresult cstruct sigs logs psq smart))

(library
 (name pck)
 (public_name git-nss.pck)
 (modules pck)
 (libraries sigs psq logs smart))

(library
 (name nss)
 (public_name git-nss)
 (modules nss fetch push)
 (libraries conduit fmt result rresult logs domain-name smart sigs neg pck))

(library
 (name smart_git)
 (public_name git-nss.git)
 (modules smart_git)
 (libraries ipaddr decompress.de decompress.zl cstruct logs astring result
   rresult bigstringaf fmt emile conduit lwt domain-name uri sigs smart pck
   nss digestif carton carton-lwt))
