(executable
 (name test)
 (flags
  (:standard -thread))
 (libraries
  git_version
  lwt
  lwt.unix
  result
  rresult
  fpath
  decompress.de
  decompress.zl
  optint
  fmt
  bigarray-compat
  bigstringaf
  base64
  bos
  checkseum.c
  digestif.c
  mmap
  unix
  threads
  carton
  carton-lwt
  alcotest))

(rule
 (alias runtest)
 (package carton-lwt)
 (deps
  (:test test.exe)
  bomb.pack)
 (action
  (run %{test} --color=always)))
