(executable
 (name      test)
 (libraries checkseum.ocaml digestif.ocaml
            test_git test_smart
            git-mirage io-page.unix conduit-mirage
            tcpip.udpv4-socket tcpip.tcpv4-socket tcpip.unix
            tcpip.stack-socket mirage-time-unix))

(alias
 (name runtest)
 (package git-mirage)
 (deps test.exe
       ../data/pack.idx ../data/pack.pack
       ../data/bomb.idx ../data/bomb.pack)
  (action (run ./test.exe -q --color=always)))
